assignment1/src/main/d96/parser/test/antlr_test/D96Parser.java
// Generated from D96.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class D96Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		BLOCK_CMT=1, BREAK=2, FOREACH=3, INT=4, NULL=5, CONSTRUCTOR=6, CONTINUE=7, 
		TRUE=8, FLOAT=9, CLASS=10, DESTRUCTOR=11, IF=12, FALSE=13, BOOLEAN=14, 
		VAL=15, NEW=16, ELSEIF=17, ARRAY=18, STRING=19, VAR=20, BY=21, ELSE=22, 
		IN=23, RETURN=24, SELF=25, ADD=26, NOT=27, NOT_EQUAL=28, EQUALDOT=29, 
		SUB=30, AND=31, LT=32, ADDDOT=33, MUL=34, OR=35, LE=36, DIV=37, EQUAL=38, 
		GT=39, SC=40, MOD=41, ASSIGN=42, GE=43, LSB=44, RSB=45, LB=46, RB=47, 
		LP=48, RP=49, SM=50, DOT=51, CM=52, Extended=53, FROMTO=54, INTERGER_GT_ZERO=55, 
		INTEGER=56, FLOAT_NUMBER=57, BOOLEAN_LITERAL=58, STRING_LITERAL=59, ID=60, 
		DOLLARID=61, WS=62, UNCLOSE_STRING=63, ILLEGAL_ESCAPE=64, ERROR_CHAR=65;
	public static final int
		RULE_program = 0, RULE_class_declares = 1, RULE_class_declare = 2, RULE_member_decl = 3, 
		RULE_memberlist = 4, RULE_members = 5, RULE_member = 6, RULE_att_declare = 7, 
		RULE_att_names = 8, RULE_att_init_value = 9, RULE_values = 10, RULE_value = 11, 
		RULE_data_type = 12, RULE_primitive_type = 13, RULE_classtype = 14, RULE_method_declare = 15, 
		RULE_func_declare = 16, RULE_paramlist = 17, RULE_params = 18, RULE_param = 19, 
		RULE_idnamelist = 20, RULE_blockstatment = 21, RULE_stamentlist = 22, 
		RULE_staments = 23, RULE_stament = 24, RULE_literal = 25, RULE_index_array_literal = 26, 
		RULE_primitive_literal = 27, RULE_multi_array = 28, RULE_array_type = 29, 
		RULE_vardecl_stm = 30, RULE_varlist = 31, RULE_variable_names = 32, RULE_variable_init_value = 33, 
		RULE_assign_stm = 34, RULE_leftassign = 35, RULE_scalarvar = 36, RULE_indexed_exp = 37, 
		RULE_if_stm = 38, RULE_elseif_stms = 39, RULE_elseif_stm = 40, RULE_else_stm = 41, 
		RULE_forin_stm = 42, RULE_steploop = 43, RULE_break_stm = 44, RULE_continue_stm = 45, 
		RULE_return_stm = 46, RULE_method_invocation_stm = 47, RULE_contructor_declare = 48, 
		RULE_detructor_declare = 49, RULE_idname = 50, RULE_index_operator = 51, 
		RULE_exp = 52, RULE_exp0 = 53, RULE_exp1 = 54, RULE_exp2 = 55, RULE_exp3 = 56, 
		RULE_exp4 = 57, RULE_exp5 = 58, RULE_exp6 = 59, RULE_exp7 = 60, RULE_exp8 = 61, 
		RULE_exp9 = 62, RULE_exp10 = 63, RULE_func_call = 64, RULE_static_operand = 65, 
		RULE_static_func_call = 66, RULE_method_invocate = 67, RULE_object_exp = 68, 
		RULE_object_exp1 = 69, RULE_explists = 70, RULE_explist = 71, RULE_static_method_invocate = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "class_declares", "class_declare", "member_decl", "memberlist", 
			"members", "member", "att_declare", "att_names", "att_init_value", "values", 
			"value", "data_type", "primitive_type", "classtype", "method_declare", 
			"func_declare", "paramlist", "params", "param", "idnamelist", "blockstatment", 
			"stamentlist", "staments", "stament", "literal", "index_array_literal", 
			"primitive_literal", "multi_array", "array_type", "vardecl_stm", "varlist", 
			"variable_names", "variable_init_value", "assign_stm", "leftassign", 
			"scalarvar", "indexed_exp", "if_stm", "elseif_stms", "elseif_stm", "else_stm", 
			"forin_stm", "steploop", "break_stm", "continue_stm", "return_stm", "method_invocation_stm", 
			"contructor_declare", "detructor_declare", "idname", "index_operator", 
			"exp", "exp0", "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "exp7", 
			"exp8", "exp9", "exp10", "func_call", "static_operand", "static_func_call", 
			"method_invocate", "object_exp", "object_exp1", "explists", "explist", 
			"static_method_invocate"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'Break'", "'Foreach'", "'Int'", "'Null'", "'Constructor'", 
			"'Continue'", "'True'", "'Float'", "'Class'", "'Destructor'", "'If'", 
			"'False'", "'Boolean'", "'Val'", "'New'", "'Elseif'", "'Array'", "'String'", 
			"'Var'", "'By'", "'Else'", "'In'", "'Return'", "'Self'", "'+'", "'!'", 
			"'!='", "'==.'", "'-'", "'&&'", "'<'", "'+.'", "'*'", "'||'", "'<='", 
			"'/'", "'=='", "'>'", "'::'", "'%'", "'='", "'>='", "'['", "']'", "'{'", 
			"'}'", "'('", "')'", "';'", "'.'", "','", "':'", "'..'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "BLOCK_CMT", "BREAK", "FOREACH", "INT", "NULL", "CONSTRUCTOR", 
			"CONTINUE", "TRUE", "FLOAT", "CLASS", "DESTRUCTOR", "IF", "FALSE", "BOOLEAN", 
			"VAL", "NEW", "ELSEIF", "ARRAY", "STRING", "VAR", "BY", "ELSE", "IN", 
			"RETURN", "SELF", "ADD", "NOT", "NOT_EQUAL", "EQUALDOT", "SUB", "AND", 
			"LT", "ADDDOT", "MUL", "OR", "LE", "DIV", "EQUAL", "GT", "SC", "MOD", 
			"ASSIGN", "GE", "LSB", "RSB", "LB", "RB", "LP", "RP", "SM", "DOT", "CM", 
			"Extended", "FROMTO", "INTERGER_GT_ZERO", "INTEGER", "FLOAT_NUMBER", 
			"BOOLEAN_LITERAL", "STRING_LITERAL", "ID", "DOLLARID", "WS", "UNCLOSE_STRING", 
			"ILLEGAL_ESCAPE", "ERROR_CHAR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "D96.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public D96Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Class_declaresContext class_declares() {
			return getRuleContext(Class_declaresContext.class,0);
		}
		public TerminalNode EOF() { return getToken(D96Parser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			class_declares();
			setState(147);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_declaresContext extends ParserRuleContext {
		public Class_declareContext class_declare() {
			return getRuleContext(Class_declareContext.class,0);
		}
		public Class_declaresContext class_declares() {
			return getRuleContext(Class_declaresContext.class,0);
		}
		public Class_declaresContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_declares; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterClass_declares(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitClass_declares(this);
		}
	}

	public final Class_declaresContext class_declares() throws RecognitionException {
		Class_declaresContext _localctx = new Class_declaresContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_class_declares);
		try {
			setState(153);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(149);
				class_declare();
				setState(150);
				class_declares();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				class_declare();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_declareContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(D96Parser.CLASS, 0); }
		public List<TerminalNode> ID() { return getTokens(D96Parser.ID); }
		public TerminalNode ID(int i) {
			return getToken(D96Parser.ID, i);
		}
		public Member_declContext member_decl() {
			return getRuleContext(Member_declContext.class,0);
		}
		public TerminalNode Extended() { return getToken(D96Parser.Extended, 0); }
		public Class_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterClass_declare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitClass_declare(this);
		}
	}

	public final Class_declareContext class_declare() throws RecognitionException {
		Class_declareContext _localctx = new Class_declareContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_class_declare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			match(CLASS);
			setState(156);
			match(ID);
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Extended) {
				{
				setState(157);
				match(Extended);
				setState(158);
				match(ID);
				}
			}

			setState(161);
			member_decl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Member_declContext extends ParserRuleContext {
		public TerminalNode LB() { return getToken(D96Parser.LB, 0); }
		public MemberlistContext memberlist() {
			return getRuleContext(MemberlistContext.class,0);
		}
		public TerminalNode RB() { return getToken(D96Parser.RB, 0); }
		public Member_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterMember_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitMember_decl(this);
		}
	}

	public final Member_declContext member_decl() throws RecognitionException {
		Member_declContext _localctx = new Member_declContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_member_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(LB);
			setState(164);
			memberlist();
			setState(165);
			match(RB);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MemberlistContext extends ParserRuleContext {
		public MembersContext members() {
			return getRuleContext(MembersContext.class,0);
		}
		public MemberlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_memberlist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterMemberlist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitMemberlist(this);
		}
	}

	public final MemberlistContext memberlist() throws RecognitionException {
		MemberlistContext _localctx = new MemberlistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_memberlist);
		try {
			setState(169);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONSTRUCTOR:
			case DESTRUCTOR:
			case VAL:
			case VAR:
			case ID:
			case DOLLARID:
				enterOuterAlt(_localctx, 1);
				{
				setState(167);
				members();
				}
				break;
			case RB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MembersContext extends ParserRuleContext {
		public MemberContext member() {
			return getRuleContext(MemberContext.class,0);
		}
		public MembersContext members() {
			return getRuleContext(MembersContext.class,0);
		}
		public MembersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_members; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterMembers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitMembers(this);
		}
	}

	public final MembersContext members() throws RecognitionException {
		MembersContext _localctx = new MembersContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_members);
		try {
			setState(175);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(171);
				member();
				setState(172);
				members();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(174);
				member();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MemberContext extends ParserRuleContext {
		public Att_declareContext att_declare() {
			return getRuleContext(Att_declareContext.class,0);
		}
		public Method_declareContext method_declare() {
			return getRuleContext(Method_declareContext.class,0);
		}
		public MemberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_member; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterMember(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitMember(this);
		}
	}

	public final MemberContext member() throws RecognitionException {
		MemberContext _localctx = new MemberContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_member);
		try {
			setState(179);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAL:
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(177);
				att_declare();
				}
				break;
			case CONSTRUCTOR:
			case DESTRUCTOR:
			case ID:
			case DOLLARID:
				enterOuterAlt(_localctx, 2);
				{
				setState(178);
				method_declare();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Att_declareContext extends ParserRuleContext {
		public TerminalNode SM() { return getToken(D96Parser.SM, 0); }
		public TerminalNode VAL() { return getToken(D96Parser.VAL, 0); }
		public TerminalNode VAR() { return getToken(D96Parser.VAR, 0); }
		public Att_namesContext att_names() {
			return getRuleContext(Att_namesContext.class,0);
		}
		public TerminalNode Extended() { return getToken(D96Parser.Extended, 0); }
		public Data_typeContext data_type() {
			return getRuleContext(Data_typeContext.class,0);
		}
		public Att_init_valueContext att_init_value() {
			return getRuleContext(Att_init_valueContext.class,0);
		}
		public Att_declareContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_att_declare; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterAtt_declare(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitAtt_declare(this);
		}
	}

	public final Att_declareContext att_declare() throws RecognitionException {
		Att_declareContext _localctx = new Att_declareContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_att_declare);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_la = _input.LA(1);
			if ( !(_la==VAL || _la==VAR) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(187);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(182);
				att_names();
				setState(183);
				match(Extended);
				setState(184);
				data_type();
				}
				break;
			case 2:
				{
				setState(186);
				att_init_value();
				}
				break;
			}
			setState(189);
			match(SM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Att_namesContext extends ParserRuleContext {
		public IdnameContext idname() {
			return getRuleContext(IdnameContext.class,0);
		}
		public TerminalNode CM() { return getToken(D96Parser.CM, 0); }
		public Att_namesContext att_names() {
			return getRuleContext(Att_namesContext.class,0);
		}
		public Att_namesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_att_names; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).enterAtt_names(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof D96Listener ) ((D96Listener)listener).exitAtt_names(this);
		}
	}

	public final Att_namesContext att_names() throws RecognitionException {
		Att_namesContext _localctx = new Att_namesContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_att_names);
		try {
			setState(196);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(191);
				idname();
				setState(192);
				match(CM);
				setState(193);
				att_names();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(195);
				idname();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
